<resources>
    <string name="app_name">Faveo Client</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="ticket_list">Ticket List</string>
    <string name="client_list">My Profile</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="inbox">My Tickets</string>
    <string name="closed_tickets">Closed Tickets</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="sry_not_connected_to_internet">Sorry! Not connected to internet.</string>
    <string name="connected_to_internet">Connected to Internet</string>
    <string name="confirmLogOut">Logging out</string>
    <string name="aaaa_0001_0000001" translatable="false">#AAAA–0001–0000001</string>
    <string name="dummy_name" translatable="false">Client Name</string>
    <string name="dummy_date" translatable="false">6th Dec 2016</string>
    <string name="blue_name" translatable="false">blue</string>
    <string name="confirmMessage">Are you sure you want to exit?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="website">Website</string>
    <string name="faveo_url" translatable="false">www.faveohelpdesk.com</string>
    <string name="faveo_content">Headquartered in Bangalore, Faveo Helpdesk provides Businesses with an automated Helpdesk system to manage customer support.  The word Faveo comes from Latin which means to be favourable. Which truly highlights vision and the scope as well as the functionality of the product that Faveo is. It is specifically designed to cater the needs of startups and SME’s empowering them with state of art, ticket based support system. In today’s competitive startup scenario customer retention is one of the major challenges. Handling client query diligently is all the difference between retaining or losing a long lasting relationship. The company is driven with passion of providing tools for managing consumer queries for strategic insights and helping companies take those decisive decisions.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_hint">Search hint</string>
    <string name="helpdesk_url">Helpdesk URL</string>
    <string name="need_help_with_your_servicedesk_url">Need help with your help desk URL?</string>
    <string name="pleasewait">Please wait</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="verifying_url">Verifying URL</string>
    <string name="signing_in">Signing in</string>
    <string name="access_checking">Getting the access</string>
    <string name="ok">ok</string>
    <string name="access_denied">Access denied</string>
    <string name="please_purchase_faveo">Please purchase pro edition to use the app.</string>
    <string name="done">done</string>
    <string name="error_verifying_url">error while verifying the url.</string>
    <string name="please_enter_a_valid_url">Please enter a valid URL</string>
    <string name="wondering_what_will_be_your_helpdesk_url">Wondering what will be your helpdesk URL?</string>
    <string name="this_is_the_url">This is the URL where your help desk is installed.You can reach out to your IT admin to know more.</string>
    <string name="for_more_information_please_drop_a_mail_to_support_ladybirdweb_com">For more information please drop a mail to support@ladybirdweb.com</string>
    <string name="loading">loading</string>
    <string name="retry">try again</string>
    <string name="oops_no_internet">Oops no Internet</string>
    <string name="done_loading">done loading</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="userLogIn">Sorry! agent or admin can\'t log in to the app</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_checking_pro">Error while checking pro edition</string>
    <string name="apiDisabled">Please enable API from web application</string>
    <string name="invalid_url">This URL is invalid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faveo_helpdesk">Faveo Helpdesk</string>
    <string name="version_2_0">version : 2.0</string>
    <string name="email">Email</string>
    <string name="required">required</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="subjectForCreate">Subject</string>
    <string name="priority">Priority</string>
    <string name="helptopic">Helptopic</string>
    <string name="message">Message</string>
    <string name="img_name">Image name</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="document">Document</string>
    <string name="fileSize">File size should not exceed 6 MB</string>
    <string name="btn_ok">ok</string>
    <string name="btn_cancel">cancel</string>
    <string name="permission_camera_denied">you have denied permission for the app</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_records">No records found</string>
    <string name="mytickets">My Open Tickets</string>
    <string name="open">Open</string>
    <string name="all_caught_up">All tickets are loaded</string>
    <string name="closed">Closed</string>
    <string name="refreshPage">are you sure you want to refresh the page?</string>
    <string name="fill_firstname">please provide first name</string>
    <string name="fill_all_the_details">please fill all the details</string>
    <string name="invalid_email">enter valid email id</string>
    <string name="sub_must_not_be_empty">subject must not be empty</string>
    <string name="only_special_characters_not_allowed_here">only special characters not allowed in subject</string>
    <string name="please_select_some_priority">select some priority</string>
    <string name="select_some_helptopic">select some helptopic</string>
    <string name="msg_must_not_be_empty">message must not be empty</string>
    <string name="createConfirmation">Are you sure you want to create the ticket?</string>
    <string name="permission">you don\'t have permission to perform this action.</string>
    <string name="ticket_created_success">Ticket has been created successfully</string>
    <string name="creating_ticket">creating ticket</string>
    <string name="first_name1">First name</string>
    <string name="myprofile">My profile</string>
    <string name="unexpected_error">something went wrong</string>
    <string name="editedcustomerdetails">profile edited successfully</string>
    <string name="confirmEdit">are you sure you want to edit?</string>
    <string name="oldpassword">Old password</string>
    <string name="newpassword">New password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="update">Update</string>
    <string name="show">show</string>
    <string name="this_field_is_required">this field is required</string>
    <string name="passwordNotMatch">password did not match</string>
    <string name="passwordmustmatch">password must be same</string>
    <string name="differentpassword">please select different password</string>
    <string name="passwordchange">password changed successfully</string>
    <string name="passwordconfirm">are you sure you want to change the password?</string>
    <string name="passwordchangesuccess">password has been changed successfully.To use the app you have to log in again.Select ok to continue.</string>
    <string name="subject">Subject</string>
    <string name="not_available">Not available</string>
    <string name="assignedto">Assignee name</string>
    <string name="name">Name</string>
    <string name="due_date">Due date</string>
    <string name="created_date">Created date</string>
    <string name="last_response_date">Last response date</string>
    <string name="conversation">Conversation</string>
    <string name="detail">Details</string>
    <string name="internal_note">Internal note</string>
    <string name="attachment">Attachment</string>
    <string name="ticketReply">Ticket reply</string>
    <string name="leaveYourMessage">leave your message here</string>
    <string name="sending_msg">sending your message</string>
    <string name="wrong_user_id">user id is not valid</string>
    <string name="posted_reply">posted your reply</string>
    <string name="successfullyChanged">status successfully changed</string>
    <string name="statusConfirmation">are you sure you want to change the status?</string>
    <string name="noticket">please selct some ticket</string>
    <string name="myclosed">My Closed Tickets</string>
    <string name="cancel">cancel</string>
    <string name="discard">discard changes?</string>
    <string name="action_search">Search</string>
    <string name="refreshing">Refreshing the page</string>
    <string name="change_password_text">Are you sure you want to change your password?</string>
    <string name="intro">Enough intro,let\'s explore the app...</string>
</resources>
