<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:theme="@style/MyMaterialTheme">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layoutoldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/inputoldpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:hint="@string/oldpassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/passwordoldError"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:text="@string/this_field_is_required"
                    android:textColor="#ff0000"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layoutnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/inputnewpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:hint="@string/newpassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/passwordErrornew"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:text="@string/this_field_is_required"
                    android:textColor="#ff0000"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:hint="@string/confirmpassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/passwordError"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:text="@string/this_field_is_required"
                    android:textColor="#ff0000"
                    android:visibility="gone" />
            </android.support.design.widget.TextInputLayout>

            <!--<Button-->
            <!--android:id="@+id/updateButton"-->
            <!--android:layout_width="110dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_gravity="end"-->
            <!--android:background="@drawable/rectangle1"-->
            <!--android:backgroundTint="@color/faveo"-->
            <!--android:drawableLeft="@drawable/ic_refresh_black_24dp"-->
            <!--android:drawablePadding="-15sp"-->
            <!--android:text="@string/update"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/white" />-->
        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>