<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="com.android.faveo.CreateNewTicketActivity">

        <!--<TextView-->
        <!--android:id="@+id/textView_ticket_number"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:gravity="center"-->
        <!--android:maxLines="1"-->
        <!--android:paddingTop="8dp"-->
        <!--android:text="Ticket Number"-->
        <!--android:textCursorDrawable="@drawable/color_cursor"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.3"-->
        <!--android:text="@string/sla_plans"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<Spinner-->
        <!--android:id="@+id/spinner_sla_plans"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:entries="@array/spinnerSlaPlans"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:maxLines="1"-->
        <!--android:paddingBottom="24dp"-->
        <!--android:paddingTop="24dp"-->
        <!--android:textSize="14sp" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.3"-->
        <!--android:text="@string/status"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="14sp"-->
        <!--android:textStyle="bold" />-->

        <!--<Spinner-->
        <!--android:id="@+id/spinner_status"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:background="@drawable/edittext_modified_states"-->
        <!--android:entries="@array/spinnerPriority"-->
        <!--android:imeOptions="actionNext"-->
        <!--android:maxLines="1"-->
        <!--android:paddingBottom="24dp"-->
        <!--android:paddingTop="24dp"-->
        <!--android:textSize="14sp" />-->


        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/helptopic"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/spinner_help_topics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/assignedto"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Spinner
            android:id="@+id/spinner_staffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/assignedto"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_ticketDetail_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/due_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/created_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_created_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:alpha=".8"
                android:fontFamily="@font/hintedlainesansregular"
                android:text="@string/last_response_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText_last_response_date"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:alpha="0.5"
            android:background="@drawable/edittext_modified_states"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/not_available"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />


        <!--<Button-->
        <!--android:id="@+id/button_save"-->
        <!--android:layout_width="180dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginBottom="56dp"-->
        <!--android:background="@drawable/button_background"-->
        <!--android:text="@string/save"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="16sp"-->
        <!--android:textStyle="bold" />-->

    </LinearLayout>

</ScrollView>